# VoxelEngine

./: .clang-format  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  diff.txt
.github/workflows/: ci_voxelengine.yml  run_cmake.py
VEDemoGame/: CMakeLists.txt  game.cpp  game.hpp  preinclude.cpp  preinclude.hpp  symgen.filter
VEDemoGame/component/: render_tag.hpp
VEDemoGame/core/: core.hpp
VEDemoGame/entity/: howlee.hpp  player.cpp  player.hpp  skybox.hpp  world.hpp
VEDemoGame/input/: controls.hpp  input_binder.hpp  key_bindings.hpp
VEDemoGame/tile/: tiles.cpp  tiles.hpp
VEDemoPlugin/: CMakeLists.txt  plugin.cpp  plugin.hpp  symgen.filter
VEDemoPlugin/core/: api.hpp  core.hpp  plugin_api.hpp
VEEngineSettings/: CMakeLists.txt  README.md  preinclude.cpp  preinclude.hpp
VELauncher/: CMakeLists.txt  launcher.cpp  main.cpp
VoxelEngine/: CMakeLists.txt  engine.cpp  engine.hpp  engine_event.hpp  engine_events.hpp  engine_state.hpp  symgen.filter
VoxelEngine/clientserver/: client.cpp  client.hpp  clientserver.hpp  connect.hpp  instance.cpp  instance.hpp  instance_events.hpp  instance_id.hpp  local_message_handler.hpp  message_handler.cpp  message_handler.hpp  message_type_registry.hpp  messsage_handler.cpp  remote_message_handler.hpp  server.cpp  server.hpp
VoxelEngine/core/: alloca_support.hpp  assert.hpp  breakpoint.hpp  configuration.hpp  core.hpp  doxygen.hpp  game_preinclude.hpp  game_preinclude_helpers.hpp  includes.hpp  ioc.cpp  ioc.hpp  legacy.hpp  mutator.hpp  overridable_fn_tag.hpp  platform.hpp  preprocessor.hpp  profiler.hpp  range.hpp  settings_preinclude.hpp  stb_impl.cpp  traits.hpp  typedefs.hpp  version.hpp  windows_header_cleanup.hpp
VoxelEngine/dependent/: actor.cpp  actor.hpp  actor_id.cpp  actor_id.hpp  dependent_info.hpp  game.hpp  game_callbacks.hpp  plugin.hpp  plugin_loader.cpp  plugin_loader.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_registry.cpp  plugin_registry.hpp  resource_owner.hpp  resource_owner_registry.cpp  resource_owner_registry.hpp
VoxelEngine/ecs/: change_validator.hpp  component_registry.cpp  component_registry.hpp  ecs.hpp  empty_storage.hpp  entt_include.cpp  entt_include.hpp  partially_synchronized.cpp  partially_synchronized.hpp  registry.hpp  registry_helpers.cpp  registry_helpers.hpp  scene.hpp  scene_registry.cpp  scene_registry.hpp  view.hpp  view_type.hpp
VoxelEngine/entity/: entity.hpp
VoxelEngine/event/: delayed_event_dispatcher.hpp  delayed_prioritized_event_dispatcher.hpp  dispatcher.hpp  event.hpp  event_dispatcher.hpp  event_handler.hpp  event_handler_id.hpp  event_system.hpp  handle.hpp  immediate_prioritized_event_dispatcher.hpp  priority_mode.hpp  priority_storage.hpp  simple_event_dispatcher.hpp  spatial_event_dispatcher.hpp  subscribe_only_view.hpp
VoxelEngine/graphics/: gl_context.cpp  gl_context.hpp  gl_error_callback.hpp  graphics.hpp  graphics_includes.hpp  graphics_sih.hpp  layerstack.hpp  shader_buffer_pair.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
VoxelEngine/input/: button_state.hpp  input.hpp  input_binder.cpp  input_binder.hpp  input_categories.hpp  input_event.hpp  input_manager.cpp  input_manager.hpp  key_mods.hpp  key_state.hpp  keyboard.hpp  mouse.hpp  mouse_button.hpp  mouse_state.hpp  tick_timepoint.hpp  window.hpp
VoxelEngine/platform/: platform_include.hpp
VoxelEngine/side/: game_controller.hpp  side.hpp  side_controller.hpp
VoxelEngine/tests/: clientserver_communication_common.hpp  clientserver_communication_local.cpp  clientserver_communication_remote.cpp  clientserver_ecs_sync_local.cpp  clientserver_ecs_sync_remote.cpp  clientserver_message_compound.cpp  clientserver_message_exchange.cpp  clientserver_security.cpp  define_game_symbols.hpp  event_dispatcher.cpp  event_system.cpp  event_system_basic_functionality.cpp  event_system_common.hpp  event_system_priority.cpp  event_system_recursive.cpp  glsl_layout.cpp  graphics_pbr_with_bloom.cpp  input_binder_binary.cpp  input_binder_drag.cpp  input_binder_motion.cpp  input_manager_callback.cpp  priority_storage.cpp  socket_connection.cpp  stack_polymorph.cpp  static_entity_autodestruct.cpp  test_asserts.hpp  test_common.hpp  test_framework.hpp  test_fuzz_data.hpp  test_fuzz_operations.hpp  texture_atlas_overflow.cpp  texture_atlas_packing.cpp  texture_atlas_write.cpp  texture_utils_merge.cpp  tile_registry_monostate_packing.cpp  utility_compression.cpp  utility_flatten.cpp  utility_serialization.cpp
VoxelEngine/threading/: dummy_mutex.hpp  shared_lock_guard.hpp  thread_id.hpp  threadsafe.hpp  threadsafe_counter.hpp  try_lock_while.hpp
VoxelEngine/utility/: algorithm.hpp  arbitrary_storage.hpp  arg_parser.hpp  assert.hpp  bimap.hpp  bind_return.hpp  bit.hpp  cache.hpp  color.hpp  compression.hpp  constexpr_string_ops.hpp  copy.hpp  cube.hpp  decompose.hpp  delayed_cast.hpp  direction.hpp  distance.hpp  expected.hpp  friend.hpp  functional.hpp  heterogeneous_key.hpp  invalidatable_transform.hpp  logger.cpp  logger.hpp  math.hpp  noise.hpp  on_program_start.hpp  overloadable_setting.hpp  performance_timer.hpp  priority.hpp  raii.hpp  random.hpp  repeat.hpp  serializable.hpp  spatial_iterate.hpp  stack_polymorph.hpp  string.hpp  swap_movable.hpp  then.hpp  time.hpp  (+8 more)
VoxelEngine/utils/: bit.hpp  cached.hpp  caching_mutators.hpp  canary.hpp  char_convert.hpp  color.hpp  comparable.hpp  constexpr_strcmp.hpp  container_utils.hpp  crtp.hpp  direction.hpp  erase_if_it.hpp  (+12 more)
cmake/: clang_cl_profile.cmake  clang_profile.cmake  cmake_conan.cmake  compiler_config.cmake  compiler_profile.cmake  create_include_header.cmake  create_target.cmake  generate_include_header.cmake  install_dependencies.cmake  msvc_profile.cmake  run_conan.cmake  single_include_generator.cmake  utility.cmake
dependencies/: conanfile.txt  conanremotes.txt  remotes.txt
docs/: doxyfile
documentation/: TODO.md
natvis/: absl_hash_map.natvis  boost_uuid.natvis
old/: game.cpp  game.hpp
tools/: .gitignore  README.md  common.py  copy_out_dirs.py  fetch_vk_license.py  fetch_vk_tools.py  texedit.py
(+698 files in other folders)
